<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_register"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/register_ride" />
        <item
            android:id="@+id/nav_seeRides"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/see_rides" />
    </group>

    <item android:title="@string/comunicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
